# git-stashd

./: .gitignore  Makefile  Makefile.am  README.md  README.rst  TODO.rst  build.sh  configure.ac  readme.md  todo.md
include/: argv.h  assert.h  common.h  daemon.h  error.h  except.h  fs.h  git.h  main.h  mem.h  repo.h  signal.h  signals.h  timestamp.h  usage.h  utils.h
src/: argv.c  assert.c  daemon.c  error.c  except.c  fs.c  git-stashd.c  git.c  main.c  mem.c  repo.c  signal.c  signals.c  timestamp.c  usage.c  utils.c
tools/: bootstrap.sh  build.sh  clean.sh  install.sh  uninstall.sh
